--- a/package.json
+++ b/package.json
@@ -1,5 +1,29 @@
 {
   "dependencies": {
-    "node": "^19.6.1"
-  }
+    "expres": "^0.0.5",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "node": "^19.6.1",
+    "nodemon": "^2.0.21",
+    "require": "^2.4.20",
+    "router": "^1.3.8"
+  },
+  "name": "index.js",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Samasuarez/proyectBackend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Samasuarez/proyectBackend/issues"
+  },
+  "homepage": "https://github.com/Samasuarez/proyectBackend#readme",
+  "description": ""
 }
