--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "expres": "^0.0.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "node": "^19.6.1",
     "nodemon": "^2.0.21",
     "require": "^2.4.20",
