--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "dependencies": {
     "expres": "^0.0.5",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "node": "^19.6.1",
     "nodemon": "^2.0.21",
     "require": "^2.4.20",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "socket.io": "^4.6.1"
   },
   "name": "index.js",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
