--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
     "fs": "^0.0.1-security",
+    "joi": "^17.9.1",
+    "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "node": "^19.6.1",
     "nodemon": "^2.0.21",
