--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "dependencies": {
-    "expres": "^0.0.5",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
-    "fs": "^0.0.1-security",
     "joi": "^17.9.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
@@ -11,7 +10,8 @@
     "nodemon": "^2.0.21",
     "require": "^2.4.20",
     "router": "^1.3.8",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"
   },
   "name": "index.js",
   "version": "1.0.0",
