--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
     "joi": "^17.9.1",
     "method-override": "^3.0.0",
+    "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "node": "^19.6.1",
     "nodemon": "^2.0.21",
