--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express-handlebars": "^7.0.2",
     "joi": "^17.9.1",
     "method-override": "^3.0.0",
+    "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "node": "^19.6.1",
